# stm32-uart-generator

./: Cargo.toml  memory.x  openocd.cfg
.cargo/: config.toml
src/: main.rs
