[package]
name = "mobica-workshop-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f446re",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "chrono",
] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
libm = "0.2.8"
heapless = { version = "0.8.0", features = ["defmt-03"] }
fastrand = { version = "2.1.1", default-features = false }
